--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,11 +34,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       
-      # Convert repo owner to lowercase as docker registry requires lower case names
-      # https://github.com/LucasRoesler/get-repo-owner-action
-      - name: Get Repo Owner
-        id: get_owner
-        uses: LucasRoesler/get-repo-owner-action@v1.0
+      # Convert actor to lowercase as docker registry requires lower case names
+      # https://github.community/t/additional-function-s-lowercase-uppercase/140632/2
+      - name: Transform actor to lower case
+        run: |
+          echo "USERNAME=${GITHUB_ACTOR,,}" >>${GITHUB_ENV}
 
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
@@ -47,7 +47,7 @@ jobs:
         uses: docker/login-action@v1.10.0
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ steps.get_owner.outputs.owner }}
+          username: ${{ env.USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
 
       # Extract metadata (tags, labels) for Docker
