--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -56,6 +56,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3.4.1
         with:
+          flavor: latest=true
           images: ${{ env.IMAGE_NAME }}
 
       # Build and push Docker image with Buildx (don't push on PR)
